# dataops

./: .coveragerc  .env.schema  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  app.py  config.py  docker-compose.yaml  gunicorn_config.py  gunicorn_starter.sh  license_header.md  pyproject.toml  start.py
.github/workflows/: build-and-publish.yml  cicd.yml  trigger-jenkins.yml
api/: routes.py
api/api_archive/: archive.py
api/api_file_operations/: api_file_operations.py  api_message_hub.py  copy_dispatcher.py  delete_dispatcher.py  dispatcher.py
api/api_filedata_meta/: filedata_meta.py
api/api_resource_lock/: api_file_lock.py
api/api_task_dispatch/: task_dispatch.py
dependencies/: __init__.py  cache.py
migrations/: alembic.ini  env.py
migrations/scripts/: create_db.sql
migrations/versions/: ebd1730ac381_add_archive_preview_model.py
models/: api_archive.py  api_archive_sql.py  base_models.py  file_ops_models.py  filemeta_models.py  resource_lock_reqres.py  tags_models.py  task_dispatch.py  upload_models.py  virtual_folder_models.py
resources/: __init__.py  cataloguing_manager.py  db.py  db_connection.py  error_handler.py  health_check.py  helpers.py  redis.py  redis_project_session_job.py
tests/: conftest.py  pytest.ini  test_archive.py  test_filedata_meta.py  test_task_dispatch.py
tests/api_file_operations/: __init__.py  test_dispatcher.py  test_operations.py
tests/api_resource_lock/: __init__.py  test_file_lock.py
tests/dependencies/: __init__.py  test_cache.py
